--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html(lang="ru")
     title Sbergile Talks Pro
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
+    <meta name="robots" content="noindex">
     block head
     link(rel='stylesheet', href='assets/style.css')
   body
