--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -349,13 +349,15 @@ h2 {
     border-radius: 50%;
     position: relative;
     background: none;
-    border: none;
-    background: rgba(255,255,255,.25);
+
+    background: rgba(51, 63, 72, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(8px);
 }
 
 .video-js:hover .vjs-big-play-button {
 
-    background: rgba(255,255,255,0.5);
+    background: rgba(51, 63, 72, 0.6);
 
 }
 
