--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ block content
             img(src="assets/decor0mobile.svg")
       .decor1
           img(src="assets/decor1.png")
-      .decor6
+      //.decor6
 
       .decor2
         img(src="assets/decor2.png")
