--- a/views/elems/mainMenuItems.pug
+++ b/views/elems/mainMenuItems.pug
@@ -1,3 +1,3 @@
-.mainMenuItem(onclick="scrollToElement('#player')") Трансляция
+.mainMenuItem(onclick="scrollToElement('.playerTitle')") Трансляция
 .mainMenuItem(onclick="scrollToElement('.pgm')") Программа
 .mainMenuItem(onclick="scrollToElement('.spk')") Спикеры
