--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -15,9 +15,9 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" alt="Мурад Хархаров" src="images/spk/user.png")
+                                img(width="40" height="40" alt="Юлия Чупина" src="images/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Чуприна Юлия
+                                .pgmItemSpeakerFio Юлия Чупина
                                 //.pgmItemSpeakerPos Agile-коуч
 
             .pgmItem
