--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -15,7 +15,7 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" alt="Юлия Чупина" src="images/spk/user.png")
+                                img(width="40" height="40" alt="Юлия Чупина" src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Юлия Чупина
                                 //.pgmItemSpeakerPos Agile-коуч
