--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -27,17 +27,37 @@
                     <path d="M12 10V21.5L22.4048 15.75L12 10Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     <rect x="0.5" y="0.5" width="31" height="31" rx="15.5" stroke="white" stroke-opacity="0.1"/>
                     </svg>
-                .pgmItemTime 10:00 - 10:10
+                .pgmItemTime 10:15 - 11:10
                 .pgmItemContent
-                    .pgmItemTitle Открывающий ролик / заставка. Приветственная речь
-                    .pgmItemSubTitle Панельная дискуссия: «Будущие модели управления».
+                    .pgmItemTitle Панельная дискуссия
+                    //.pgmItemSubTitle Панельная дискуссия: «Будущие модели управления».
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" alt="Мурад Хархаров" src="images/spk/haharov.png")
+                                img(width="40" height="40" src="images/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Мурад Хархаров
-                                .pgmItemSpeakerPos Agile-коуч
+                                .pgmItemSpeakerFio Алена Поляк
+                                //.pgmItemSpeakerPos Agile-коуч
+                            .pgmItemSpeaker
+                                .pgmItemSpeakerImg
+                                    img(width="40" height="40" src="images/spk/user.png")
+                                .pgmItemSpeakerName
+                                    .pgmItemSpeakerFio Анастасия Кондрашова
+                            .pgmItemSpeaker
+                                .pgmItemSpeakerImg
+                                    img(width="40" height="40" src="images/spk/user.png")
+                                .pgmItemSpeakerName
+                                    .pgmItemSpeakerFio Юлия Мотина
+                            .pgmItemSpeaker
+                                .pgmItemSpeakerImg
+                                    img(width="40" height="40" src="images/spk/user.png")
+                                .pgmItemSpeakerName
+                                    .pgmItemSpeakerFio Сергей Попов
+                            .pgmItemSpeaker
+                                .pgmItemSpeakerImg
+                                    img(width="40" height="40" src="images/spk/user.png")
+                                .pgmItemSpeakerName
+                                    .pgmItemSpeakerFio Могилин Артем
             .pgmItem
                 .pgmItemIco
                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
