--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -34,28 +34,28 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" src="images/spk/user.png")
+                                img(width="40" height="40" src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Алена Поляк
                                 //.pgmItemSpeakerPos Agile-коуч
                             .pgmItemSpeaker
                                 .pgmItemSpeakerImg
-                                    img(width="40" height="40" src="images/spk/user.png")
+                                    img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Анастасия Кондрашова
                             .pgmItemSpeaker
                                 .pgmItemSpeakerImg
-                                    img(width="40" height="40" src="images/spk/user.png")
+                                    img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Юлия Мотина
                             .pgmItemSpeaker
                                 .pgmItemSpeakerImg
-                                    img(width="40" height="40" src="images/spk/user.png")
+                                    img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Сергей Попов
                             .pgmItemSpeaker
                                 .pgmItemSpeakerImg
-                                    img(width="40" height="40" src="images/spk/user.png")
+                                    img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
                                     .pgmItemSpeakerFio Могилин Артем
             .pgmItem
