--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -65,23 +65,18 @@
                     <path d="M14.7727 13.2727C14.7045 12.697 14.428 12.25 13.9432 11.9318C13.4583 11.6136 12.8636 11.4545 12.1591 11.4545C11.6439 11.4545 11.1932 11.5379 10.8068 11.7045C10.4242 11.8712 10.125 12.1004 9.90909 12.392C9.69697 12.6837 9.59091 13.0152 9.59091 13.3864C9.59091 13.697 9.66477 13.964 9.8125 14.1875C9.96402 14.4072 10.1572 14.5909 10.392 14.7386C10.6269 14.8826 10.8731 15.0019 11.1307 15.0966C11.3883 15.1875 11.625 15.2614 11.8409 15.3182L13.0227 15.6364C13.3258 15.7159 13.6629 15.8258 14.0341 15.9659C14.4091 16.1061 14.767 16.2973 15.108 16.5398C15.4527 16.7784 15.7367 17.0852 15.9602 17.4602C16.1837 17.8352 16.2955 18.2955 16.2955 18.8409C16.2955 19.4697 16.1307 20.0379 15.8011 20.5455C15.4754 21.053 14.9981 21.4564 14.3693 21.7557C13.7443 22.0549 12.9848 22.2045 12.0909 22.2045C11.2576 22.2045 10.536 22.0701 9.92614 21.8011C9.32008 21.5322 8.8428 21.1572 8.49432 20.6761C8.14962 20.1951 7.95455 19.6364 7.90909 19H9.36364C9.40152 19.4394 9.54924 19.803 9.80682 20.0909C10.0682 20.375 10.3977 20.5871 10.7955 20.7273C11.197 20.8636 11.6288 20.9318 12.0909 20.9318C12.6288 20.9318 13.1117 20.8447 13.5398 20.6705C13.9678 20.4924 14.3068 20.2462 14.5568 19.9318C14.8068 19.6136 14.9318 19.2424 14.9318 18.8182C14.9318 18.4318 14.8239 18.1174 14.608 17.875C14.392 17.6326 14.108 17.4356 13.7557 17.2841C13.4034 17.1326 13.0227 17 12.6136 16.8864L11.1818 16.4773C10.2727 16.2159 9.55303 15.8428 9.02273 15.358C8.49242 14.8731 8.22727 14.2386 8.22727 13.4545C8.22727 12.803 8.40341 12.2348 8.75568 11.75C9.11174 11.2614 9.58902 10.8826 10.1875 10.6136C10.7898 10.3409 11.4621 10.2045 12.2045 10.2045C12.9545 10.2045 13.6212 10.339 14.2045 10.608C14.7879 10.8731 15.25 11.2367 15.5909 11.6989C15.9356 12.161 16.1174 12.6856 16.1364 13.2727H14.7727ZM22.4986 10.3636V22H21.0895V11.8409H21.0213L18.1804 13.7273V12.2955L21.0895 10.3636H22.4986Z" fill="white"/>
                     <rect x="0.5" y="0.5" width="31" height="31" rx="15.5" stroke="white" stroke-opacity="0.1"/>
                     </svg>
-                .pgmItemTime 10:10 - 13:00
+                .pgmItemTime 11:10 - 11:40
                 .pgmItemContent
-                    .pgmItemTitle 1й блок программы
-                    .pgmItemSubTitle В докладе расскажем, как устроено и работает комьюнити из 100+ Agile-коучей, а также поделимся, какие инструменты развития комьюнити работают в команде, которая уже применяла десятки разных инструментов много раз.
+                    .pgmItemTitle Ценность исследований
+                    //.pgmItemSubTitle В докладе расскажем, как устроено и работает комьюнити из 100+ Agile-коучей, а также поделимся, какие инструменты развития комьюнити работают в команде, которая уже применяла десятки разных инструментов много раз.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" alt="Виктория Романова" src="images/spk/romanova.png")
+                                img(width="40" height="40"  src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Виктория Романова
-                                .pgmItemSpeakerPos Коммуникации Офиса<br>Agile-трансформации Сбера
-                        .pgmItemSpeaker
-                            .pgmItemSpeakerImg
-                                img(width="40" height="40" alt="Евгений Солоненко" src="images/spk/solonenko.png")
-                            .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Евгений Солоненко
-                                .pgmItemSpeakerPos Agile-коуч
+                                .pgmItemSpeakerFio Козлов Дмитрий
+                                //.pgmItemSpeakerPos Коммуникации Офиса<br>Agile-трансформации Сбера
+
             .pgmItem
                 .pgmItemIco
                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
