--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -465,7 +465,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: left;
-
+    width: calc(50% - 40px);
     box-sizing: border-box;
     margin-right: 40px;
     margin-top: 24px
