--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -205,6 +205,17 @@
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Кузьмин Михаил
                                 .pgmItemSpeakerPos Владелец продукта, Сбер
+            .pgmItem
+                .pgmItemIco
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="32" height="32" rx="16" fill="#333F48" fill-opacity="0.4"/>
+                    <path d="M16 13.3333C16 12.4444 16.6347 11.5556 17.9049 11.5556C18.5784 11.5556 19.2244 11.288 19.7006 10.8117C20.1769 10.3355 20.4444 9.68953 20.4444 9.016V8.44444M12.4444 13.3333V12.8889C12.4444 12.1816 12.7254 11.5034 13.2255 11.0033C13.7256 10.5032 14.4039 10.2222 15.1111 10.2222V10.2222C15.5826 10.2222 16.0348 10.0349 16.3682 9.70152C16.7016 9.36813 16.8889 8.91594 16.8889 8.44444V8M20.4444 15.6444V18.6667C20.4444 20.0812 19.8825 21.4377 18.8823 22.4379C17.8822 23.4381 16.5256 24 15.1111 24H13.3333C11.9188 24 10.5623 23.4381 9.5621 22.4379C8.5619 21.4377 8 20.0812 8 18.6667V15.6444C8 15.503 8.05619 15.3673 8.15621 15.2673C8.25623 15.1673 8.39188 15.1111 8.53333 15.1111H19.9111C20.0526 15.1111 20.1882 15.1673 20.2882 15.2673C20.3883 15.3673 20.4444 15.503 20.4444 15.6444V15.6444Z" stroke="#EEF3FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M19.5557 15.1113H21.7779C22.3673 15.1113 22.9325 15.3455 23.3492 15.7622C23.766 16.1789 24.0001 16.7442 24.0001 17.3336C24.0001 17.9229 23.766 18.4882 23.3492 18.9049C22.9325 19.3216 22.3673 19.5558 21.7779 19.5558H20.4446" stroke="#EEF3FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    <rect x="0.5" y="0.5" width="31" height="31" rx="15.5" stroke="white" stroke-opacity="0.1"/>
+                    </svg>
+                .pgmItemTime 15:50 - 16:00
+                .pgmItemContent
+                    .pgmItemTitle Перерыв
 
             .pgmItem
                 .pgmItemIco
