--- a/views/elems/footer.pug
+++ b/views/elems/footer.pug
@@ -9,7 +9,7 @@
                     .footerRowText 900
                     .footerRowDescr Бесплатно с мобильного на территории РФ
             .footerItem
-                .footerRRow Согласие на обработку персональных данных
+                .footerRRow(onclick="window.open('http://www.sberbank.ru/ru/personal_policy')") Согласие на обработку персональных данных
                 .footerRRow(onclick="window.open('https://www.sberbank.ru/ru/inform')") Информация, обязательная к размещению
                 .footerRRow(onclick="window.open('https://www.sberbank.ru/ru/disclosure3921u')") Раскрытие информации в банке как профессиональном участнике рынка ценных бумаг
         .footerBody Сбер.ру © 1997-2022 ПАО Сбербанк. Генеральная лицензия на осуществления банковских операций от 11 августа 2015 года. Регистрационный номер — 1481.
