--- a/views/elems/pgm_2.pug
+++ b/views/elems/pgm_2.pug
@@ -15,9 +15,9 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" alt="Бакурова Ангелина" src="assets/spk/user.png")
+                                img(width="40" height="40" alt="Ангелина Бакурова" src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Бакурова Ангелина
+                                .pgmItemSpeakerFio Ангелина Бакурова
                                 .pgmItemSpeakerPos Управляющий директор<br>Начальник Офиса Agile-трансформации, Сбер
 
             .pgmItem
@@ -55,24 +55,24 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Поляк Алена
+                                .pgmItemSpeakerFio Алена Поляк
                                 //.pgmItemSpeakerPos Agile-коуч
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/kondrashova.png")
                                 .pgmItemSpeakerName
-                                    .pgmItemSpeakerFio Кондрашова Анастасия
+                                    .pgmItemSpeakerFio Анастасия Кондрашова
                                     .pgmItemSpeakerPos Senior Product Manager, Авито
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
-                                    .pgmItemSpeakerFio Мотина Юлия
+                                    .pgmItemSpeakerFio Юлия Мотина
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/user.png")
                                 .pgmItemSpeakerName
-                                    .pgmItemSpeakerFio Попов Сергей
+                                    .pgmItemSpeakerFio Сергей Попов
                         .pgmItemSpeaker
                                 .pgmItemSpeakerImg
                                     img(width="40" height="40" src="assets/spk/user.png")
@@ -94,7 +94,7 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Дмитрий Козлов" src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Козлов Дмитрий
+                                .pgmItemSpeakerFio Дмитрий Козлов
 
             .pgmItem
                 .pgmItemIco
@@ -181,12 +181,12 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Артем Могилин" src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Могилин Артем
+                                .pgmItemSpeakerFio Артем Могилин
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" alt="Павел Попко" src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Попко Павел
+                                .pgmItemSpeakerFio Павел Попко
 
             .pgmItem
                 .pgmItemIco
@@ -314,7 +314,7 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Прудников Кирилл
+                                .pgmItemSpeakerFio Кирилл Прудников
                                 //.pgmItemSpeakerPos IT лидер разработки сервисов для маркетологов, Сбер
 
             .pgmItem
@@ -334,13 +334,13 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/kostin.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Костин Никита
+                                .pgmItemSpeakerFio Никита Костин
                                 .pgmItemSpeakerPos Владелец продукта для проверки гипотез Discovery, Сбер
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/dyatlova.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Дятлова Ольга
+                                .pgmItemSpeakerFio Ольга Дятлова
                                 .pgmItemSpeakerPos UX-исследователь, методолог, Сбер
 
 
@@ -361,7 +361,7 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/kondrashova.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Кондрашова Анастасия
+                                .pgmItemSpeakerFio Анастасия Кондрашова
                                 .pgmItemSpeakerPos Senior Product Manager, Авито
 
 
