--- a/views/elems/firstPage.pug
+++ b/views/elems/firstPage.pug
@@ -3,4 +3,4 @@
         h1 Sbergile Talks
         h2 Pro
         .date
-            .dateText 17 ноября 2022
+            .dateText 17 ноября 2022 | 10:00
