--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 extends layout
 block head
-  <meta property="og:title" content="">
+  <meta property="og:title" content="Sbergile Talks Pro">
   <meta property="og:site_name" content="Sbergile Talks">
   <meta property="og:url" content="">
   <meta property="og:description" content="Sbergile Talks Pro">
