Обновление описаний доклада, некоторый должностей, фамилии

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -36,7 +36,7 @@
                             .pgmItemSpeakerImg
                                 img(width="40" height="40"  src="assets/spk/user.png")
                             .pgmItemSpeakerName
-                                .pgmItemSpeakerFio Чуприна Юлия
+                                .pgmItemSpeakerFio Мотина Юлия
                                 .pgmItemSpeakerPos Управляющий директор - начальник Продуктового офиса, Сбер
 
             .pgmItem
@@ -106,7 +106,7 @@
                 .pgmItemTime 11:40 - 12:10
                 .pgmItemContent
                     .pgmItemTitle Продуктовая стратегия на примере запуска страхового продукта Защита 360°
-                    //.pgmItemSubTitle В докладе расскажем, как устроено и работает комьюнити из 100+ Agile-коучей, а также поделимся, какие инструменты развития комьюнити работают в команде, которая уже применяла десятки разных инструментов много раз.
+                    .pgmItemSubTitle В рамках выступления будут затронуты темы разработки продуктовой стратегии на примере создания онлайн продукта корпоративного страхования: от идеи к реализации за 3 месяца. Рассмотрим продуктовые метрики, зачем нужен helicopter view, поговорим про важность CustDev, генерацию гипотез, их проверку, а также про UX/UI-исследования.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -143,7 +143,7 @@
                 .pgmItemTime 12:40 - 13:10
                 .pgmItemContent
                     .pgmItemTitle Как разработать успешную стратегию, которая поможет развивать продукт. И которую будет не стыдно показать =)
-                    //.pgmItemSubTitle В докладе расскажем, как устроено и работает комьюнити из 100+ Agile-коучей, а также поделимся, какие инструменты развития комьюнити работают в команде, которая уже применяла десятки разных инструментов много раз.
+                    .pgmItemSubTitle В своем докладе мы разберем как построить успешную стратегию развития продукта, какие метрики использовать, как декомпозировать ее до задач и самое главное как на нее влияет клиент.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -199,7 +199,7 @@
                 .pgmItemTime 13:50 - 14:20
                 .pgmItemContent
                     .pgmItemTitle Сервис с нуля в большом банке: ожидания и реальность.
-                    //.pgmItemSubTitle Благодаря этому докладу вы узнаете:<br>Как мозг считывает и воспринимает изменения. Почему он боится и как сделать так, чтобы древние части мозга не мешали инновациям. От чего зависит, как мозг воспринимает изменения и как модифицировать изменение чтобы его захотелось делать.
+                    .pgmItemSubTitle Мы развиваем самый большой подписочный сервис в России - Уведомления. Когда ежедневно отправляешь 300 млн. смс, а твоя аудитория - много миллионов человек, начинаешь смотреть на мир через призму масштабности. А что, если ты начнешь создание абсолютно нового, при этом платного сервиса, не имеющего аналогов на рынке?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -237,14 +237,14 @@
                 .pgmItemTime 14:50 - 15:20
                 .pgmItemContent
                     .pgmItemTitle Как в рутине задач находить время на Disrupt
-                    //.pgmItemSubTitle Благодаря этому докладу вы узнаете:<br>Как мозг считывает и воспринимает изменения. Почему он боится и как сделать так, чтобы древние части мозга не мешали инновациям. От чего зависит, как мозг воспринимает изменения и как модифицировать изменение чтобы его захотелось делать.
+                    .pgmItemSubTitle На живом примере продукта trade-in недвижимости расскажем:<br> 1. Как находить время на Disrupt <br>2. Что помогает команде Домклика быстро проверять гипотезы и не боятся отвергать их <br>3. Лайфхаки, как придумывать новые и подрывные решения
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/kesel.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Кесель Иван
-                                .pgmItemSpeakerPos Chief Product Officer Продуктовой разработки направления "Эксперт", ДомКлик от Сбера
+                                .pgmItemSpeakerPos Руководитель направления, Домклик, Сбер
             .pgmItem
                 .pgmItemIco
                     <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -256,7 +256,7 @@
                 .pgmItemTime 15:20 - 15:50
                 .pgmItemContent
                     .pgmItemTitle Продукт с нуля. Преграды. Инсайты
-                    //.pgmItemSubTitle Благодаря этому докладу вы узнаете:<br>Как мозг считывает и воспринимает изменения. Почему он боится и как сделать так, чтобы древние части мозга не мешали инновациям. От чего зависит, как мозг воспринимает изменения и как модифицировать изменение чтобы его захотелось делать.
+                    .pgmItemSubTitle Несмотря на желание сделать идеальный и востребованный продукт, команда сталкивается с определенными ограничениями при создании продукта с нуля. Среди таких ограничений: сроки, выбор направления развития, нехватка ресурсов, отношения в команде, зависимость от других команд, внешние факторы. Какие инсайты и интересные кейсы команда собрала на пути к своей цели?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -308,14 +308,15 @@
 
                 .pgmItemTime 16:30 - 17:00
                 .pgmItemContent
-                    .pgmItemTitle Ценность метрик
+                    .pgmItemTitle Подходы к управлению образовательного продукта. Опыт руководителей в EdTech
+                    //.pgmItemSubTitle В рамках доклада поговорим о метриках качества в образовании, как взаимодействуют между собой и что показывают NPS и LTV и Transformation rate. Также изучим российских и зарубежных практик решения бизнес задач. На примере конкретных кейсов поймем, как выйти за рамки своей сферы деятельности и погрузиться в “полярные” отрасли для поиска новых решений
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
                                 img(width="40" height="40" src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Прудников Кирилл
-                                //.pgmItemSpeakerPos IT лидер разработки сервисов для маркетологов, Сбер
+                                .pgmItemSpeakerPos Hуководитель направления “Управление” в Skillbox
 
             .pgmItem
                 .pgmItemIco
@@ -329,6 +330,7 @@
                 .pgmItemTime 17:00 - 17:30
                 .pgmItemContent
                     .pgmItemTitle UX-исследования при разработке продукта: барьеры VS реальность
+                    .pgmItemSubTitle При работе над продуктом команда выводит много новых фич. И когда возникает необходимость проводить исследования, встает вопрос: «Кто должен проводить исследования?», «Как найти время у команды?», «Зачем исследования, если продукт работает?» и много других. В открытом диалоге Владелец продукта и UX-исследователь поднимут барьеры, которые возникают на пути к проведению исследований, и попытаются их разбить.
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
@@ -356,6 +358,7 @@
                 .pgmItemTime 17:30 - 18:00
                 .pgmItemContent
                     .pgmItemTitle Как не терять деньги на внутренних продуктах/Внутренние продукты: нужен ли вам в зоопарке такой зверь
+                    .pgmItemSubTitle Внутренние продукты пилят практически все, но очень мало об этом говорят. Мы поговорим о основных вопросах, который волнует всех продактов внутренних продуктов и их заказчиков:<br>- Должна ли разработка внутреннего продукта отличаться от разработки внешнего?<br>- Как работать с метриками и фреймворками?<br>- Как развивать себя как PM’a внутреннего продукта?
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
