Добавлено фото спикера

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -313,7 +313,7 @@
                     .pgmItemSpeakers
                         .pgmItemSpeaker
                             .pgmItemSpeakerImg
-                                img(width="40" height="40" src="assets/spk/user.png")
+                                img(width="40" height="40" src="assets/spk/prudnikov.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Прудников Кирилл
                                 .pgmItemSpeakerPos Hуководитель направления “Управление” в Skillbox
