Замена кавычек на ёлочки, добавление тире и неразрывного пробела

--- a/views/elems/pgm.pug
+++ b/views/elems/pgm.pug
@@ -37,7 +37,7 @@
                                 img(width="40" height="40"  src="assets/spk/user.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Мотина Юлия
-                                .pgmItemSpeakerPos Управляющий директор - начальник Продуктового офиса, Сбер
+                                .pgmItemSpeakerPos Управляющий директор<br>Начальник Продуктового офиса, Сбер
 
             .pgmItem
                 .pgmItemIco
@@ -316,7 +316,7 @@
                                 img(width="40" height="40" src="assets/spk/prudnikov.png")
                             .pgmItemSpeakerName
                                 .pgmItemSpeakerFio Прудников Кирилл
-                                .pgmItemSpeakerPos Hуководитель направления “Управление” в Skillbox
+                                .pgmItemSpeakerPos Руководитель направления &laquo;Управление&raquo; в Skillbox
 
             .pgmItem
                 .pgmItemIco
