--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -13,7 +13,7 @@
                     .spkPhoto
                         img(src="assets/spk/user.png")
                     .spkFio Бакурова Ангелина
-                    .spkPos Управляющий директор - начальник Офиса Agile-трансформации, Сбер
+                    .spkPos Управляющий директор <br>начальник Офиса Agile-трансформации, Сбер
 
                 .spkItem
                     .spkPhoto
@@ -37,7 +37,7 @@
                     .spkPhoto
                         img(src="assets/spk/kesel.png")
                     .spkFio Кесель Иван
-                    .spkPos Chief Product Officer Продуктовой разработки направления "Эксперт", ДомКлик от Сбера
+                    .spkPos Chief Product Officer Продуктовой разработки направления &laquo;Эксперт&raquo;, ДомКлик от Сбера
 
                 .spkItem
                     .spkPhoto
@@ -115,9 +115,9 @@
                     .spkPhoto
                         img(src="assets/spk/sokolova.png")
                     .spkFio Соколова Юлия
-                    .spkPos IT лидер разработки сервисов для маркетологов, Сбер
+                    .spkPos IT лидер разработки сервисов для&nbsp;маркетологов, Сбер
 
-                .spkItem
+                //.spkItem
                     .spkPhoto
                         img(src="assets/spk/user.png")
                     .spkFio Чуприна Юлия
