--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -4,7 +4,8 @@
             .speakers
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/afanasiev.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/afanasiev.png")
                         // У остальных спикоров картики в этом формате
                     .spkFio Афанасьев Егор
                     .spkPos Chief Product Officer, SberCare, Сбер
@@ -122,11 +123,10 @@
                         img(src="assets/spk/user.png")
                     .spkFio Чуприна Юлия
                     .spkPos Управляющий директор - начальник Продуктового офиса, Сбер
-                
+
                 //.spkItem
                     .spkPhoto
                         img(src="assets/spk/user.png")
                     .spkFio Виктория Романова
                     .spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
-                    
