--- a/views/elems/spk.pug
+++ b/views/elems/spk.pug
@@ -12,109 +12,127 @@
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Бакурова Ангелина
                     .spkPos Управляющий директор <br>начальник Офиса Agile-трансформации, Сбер
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/baryshnikova.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/baryshnikova.png")
                     .spkFio Барышникова Елена
                     .spkPos Владелец продукта в Центре Корпоративного Страхования, Сбер
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/boriskov.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/boriskov.png")
                     .spkFio Борисков Никита
                     .spkPos Владелец продукта, Уведомления, Сбербанк Онлайн, Сбер
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/dyatlova.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/dyatlova.png")
                     .spkFio Дятлова Ольга
                     .spkPos UX-исследователь, методолог, Сбер
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/kesel.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/kesel.png")
                     .spkFio Кесель Иван
                     .spkPos Chief Product Officer Продуктовой разработки направления &laquo;Эксперт&raquo;, ДомКлик от Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Козлов Дмитрий
                     //.spkPos Должность
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/kondrashova.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/kondrashova.png")
                     .spkFio Кондрашева Анастасия
                     .spkPos Senior Product Manager, Авито
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/kostin.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/kostin.png")
                     .spkFio Костин Никита
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/kyzmin.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/kyzmin.png")
                     .spkFio Кузьмин Михаил
                     .spkPos Владелец продукта, Сбер
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Могилин Артем
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Мотина Юлия
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Пинчук Екатерина
                     .spkPos Chief Product Officer, SberDevices, Сбер
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Поляк Алена
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Попко Павел
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Попов Сергей
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Прудников Кирилл
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/user.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/user.png")
                     .spkFio Серегина Елена
                     //.spkPos Коммуникации Офиса<br>Agile-трансформации Сбера
 
                 .spkItem
                     .spkPhoto
-                        img(src="assets/spk/sokolova.png")
+                        .spkPhotoWr
+                            img(src="assets/spk/sokolova.png")
                     .spkFio Соколова Юлия
                     .spkPos IT лидер разработки сервисов для&nbsp;маркетологов, Сбер
 
