--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -400,10 +400,21 @@ h2 {
     display: flex;
     padding-bottom: 48px;
     margin-bottom: 8px;
-    border-left: 2px solid rgba(51, 63, 72, 0.8);
-    margin-left: 16px;
 
+    margin-left: 16px;
+    position: relative;
 }
+.pgmItem::before{
+    position: absolute;
+    content: '';
+    width: 1px;
+
+    top:0;
+    bottom: 0;
+    left: 0;
+    border-left: 2px solid rgba(51, 63, 72, 0.8);
+}
+
 
 .pgmItem:last-child {
     border-left: 2px solid transparent;
