--- a/html/assets/style.css
+++ b/html/assets/style.css
@@ -414,6 +414,16 @@ h2 {
     left: -2px;
     border-left: 2px solid rgba(51, 63, 72, 0.8);
 }
+.pgmItem:last-child::before{
+    position: absolute;
+    content: '';
+    width: 1px;
+
+    top: 42px;
+    bottom: 1px;
+    left: -2px;
+    border-left: 0;
+}
 
 
 .pgmItem:last-child {
